fixed: worker/Dockerfile file COPY

--- a/worker/Dockerfile
+++ b/worker/Dockerfile
@@ -2,7 +2,10 @@ FROM python:3.10-slim
 WORKDIR /ipa2025-project/worker
 COPY requirements.txt .
 COPY  ./worker.py .
-COPY  ./ssh_router.py .
+COPY  ./get_router_data.py .
+COPY ./get_data.py .
+COPY ./config_loopback.py .
+COPY ./config_router_interface.py .
 COPY  ./save_data.py .
 RUN pip install --no-cache-dir --progress-bar off -r requirements.txt
 CMD echo "HELLOOOO"
