added: load_dotenv() to ensure eache container can read .env

--- a/worker/Dockerfile
+++ b/worker/Dockerfile
@@ -9,4 +9,4 @@ COPY ./config_router_interface.py .
 COPY  ./save_data.py .
 RUN pip install --no-cache-dir --progress-bar off -r requirements.txt
 CMD echo "HELLOOOO"
-CMD python worker.py
+CMD python -u worker.py
